<resources>
    <string name="movie">Movies</string>
    <string name="tvshow">Tv Shows</string>
    <string name="desc">Description</string>
    <string name="name">Name</string>
    <string name="date">yyyy-mm-dd</string>
    <string name="release_date">Release Date :</string>
    <string name="popularity">Popularity</string>
    <string name="rating">Rating</string>
    <string name="poster">Poster</string>
</resources>