package com.made.movieexpert.ui
//
//import androidx.recyclerview.widget.RecyclerView
//import androidx.test.core.app.ActivityScenario
//import androidx.test.espresso.Espresso
//import androidx.test.espresso.Espresso.onView
//import androidx.test.espresso.IdlingRegistry
//import androidx.test.espresso.action.ViewActions
//import androidx.test.espresso.action.ViewActions.pressBack
//import androidx.test.espresso.assertion.ViewAssertions.matches
//import androidx.test.espresso.contrib.RecyclerViewActions
//import androidx.test.espresso.matcher.ViewMatchers.*
//import com.made.movieexpert.R
//import com.made.movieexpert.core.utils.EspressoIdlingResource
//import org.junit.After
//import org.junit.Before
//import org.junit.Test
//
//class MainActivityTest {
//    @Before
//    fun setUp() {
//        ActivityScenario.launch(MainActivity::class.java)
//        IdlingRegistry.getInstance().register(EspressoIdlingResource.getEspressoIdlingResource())
//    }
//
//    @After
//    fun tearDown() {
//        IdlingRegistry.getInstance().unregister(EspressoIdlingResource.getEspressoIdlingResource())
//    }
//
//
//    @Test
//    fun swipePage() {
//        onView(withId(R.id.view_pager)).check(matches(isDisplayed()))
//        onView(withId(R.id.view_pager)).perform(ViewActions.swipeLeft())
//        onView(withId(R.id.view_pager)).perform(ViewActions.swipeRight())
//    }
//
//    @Test
//    fun checkTabLayoutDisplayed() {
//        onView(withId(R.id.tabs)).perform(ViewActions.click()).check(matches(isDisplayed()))
//    }
//
//    @Test
//    fun loadMovies() {
//        onView(withText(R.string.movie)).perform(ViewActions.click())
//        onView(withId(R.id.rv_movie)).check(matches(isDisplayed()))
//        onView(withId(R.id.rv_movie)).perform(RecyclerViewActions.scrollToPosition<RecyclerView.ViewHolder>(9))
//    }
//
//    @Test
//    fun loadDetailMovie() {
//        onView(withId(R.id.rv_movie)).check(matches(isDisplayed()))
//        onView(withId(R.id.rv_movie)).perform(RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(0, ViewActions.click()))
//        onView(withId(R.id.tv_name)).check(matches(isDisplayed()))
//        onView(withId(R.id.tv_desc)).check(matches(isDisplayed()))
//        onView(withId(R.id.tv_date)).check(matches(isDisplayed()))
//        onView(withId(R.id.tv_rating)).check(matches(isDisplayed()))
//        onView(withId(R.id.tv_popularity)).check(matches(isDisplayed()))
//        onView(withId(R.id.img_poster)).check(matches(isDisplayed()))
//        onView(withId(R.id.img_backdrop)).check(matches(isDisplayed()))
//        onView(withId(R.id.action_favorite)).perform(ViewActions.click())
//        Espresso.pressBack()
//    }
//
//    @Test
//    fun loadTvShows() {
//        onView(withId(R.id.view_pager)).perform(ViewActions.swipeLeft())
//        onView(withId(R.id.rv_tvshow)).check(matches(isDisplayed()))
//        onView(withId(R.id.rv_tvshow)).perform(RecyclerViewActions.scrollToPosition<RecyclerView.ViewHolder>(9))
//    }
//
//    @Test
//    fun loadDetailTvShow() {
//        onView(withText(R.string.tvshow)).perform(ViewActions.click())
//        onView(withId(R.id.rv_tvshow)).check(matches(isDisplayed()))
//        onView(withId(R.id.rv_tvshow)).perform(RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(5, ViewActions.click()))
//        onView(withId(R.id.tv_name)).check(matches(isDisplayed()))
//        onView(withId(R.id.tv_desc)).check(matches(isDisplayed()))
//        onView(withId(R.id.tv_date)).check(matches(isDisplayed()))
//        onView(withId(R.id.tv_rating)).check(matches(isDisplayed()))
//        onView(withId(R.id.tv_popularity)).check(matches(isDisplayed()))
//        onView(withId(R.id.action_favorite)).perform(ViewActions.click())
//        Espresso.pressBack()
//    }
//
//    @Test
//    fun loadFavoriteMovie() {
//        onView(withId(R.id.navigation_favorite)).perform(ViewActions.click())
//        onView(withId(R.id.rv_movie)).check(matches(isDisplayed()))
//        onView(withId(R.id.rv_movie)).perform(RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(0, ViewActions.click()))
//        onView(withId(R.id.tv_name)).check(matches(isDisplayed()))
//        onView(withId(R.id.action_favorite)).perform(ViewActions.click())
//        onView(isRoot()).perform(pressBack())
//    }
//
//    @Test
//    fun loadFavoriteTvShow() {
//        onView(withId(R.id.navigation_favorite)).perform(ViewActions.click())
//        onView(withText(R.string.tvshow)).perform(ViewActions.click())
//        onView(withId(R.id.rv_tvshow)).check(matches(isDisplayed()))
//        onView(withId(R.id.rv_tvshow)).perform(RecyclerViewActions.actionOnItemAtPosition<RecyclerView.ViewHolder>(0, ViewActions.click()))
//        onView(withId(R.id.tv_name)).check(matches(isDisplayed()))
//        onView(withId(R.id.action_favorite)).perform(ViewActions.click())
//        onView(isRoot()).perform(pressBack())
//    }
//}